# cat-alarm

./: .gitignore  AGENTS.md  README.md  config.yaml  pyproject.toml
src/cat_alarm/: config.py  main.py  pipeline.py  storage.py
src/cat_alarm/cameras/: base.py  webcam.py
src/cat_alarm/detection/: classifier.py  motion.py  yolo.py
src/cat_alarm/notifications/: base.py  desktop.py
